# fastapi_auth

./: pyproject.toml
app/: main.py
