[tool.poetry]
name = "fastapi_auth"
version = "0.1.0"
description = ""
authors = ["mymindd <mypspgood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
python-multipart = "^0.0.5"
passlib = "^1.7.4"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
